--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
     <!-- Links to jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    
+    <!-- Links to JavaScript -->
+    <script src="assets/javascript/app.js"></script>
+
 </head>
 <body>
 
