Working on getting ajax call to work, not quite there

--- a/index.html
+++ b/index.html
@@ -16,17 +16,20 @@
 
 </head>
 <body>
+    <h1>I'm in a glass cage of emotion!</h1>
 
+    <!-- Rendered buttons go here -->
     <div id="buttons"></div>
 
-    
+    <!-- Form for user to add their own button -->
+    <form id="form">
+        <label for="user-input"><h3>Add your own reaction button:</h3></label>
+        <input type="text" id="textbox">
+        <br>
+
+    <!-- Area of generated gifs -->
     <div id="gifs"></div>
-
-
-    <h2>Add your own reaction button:</h2>
-    <div id="textbox"></div>
-    <div id="submit"></div>
-
+    <div class="gif"></div>
 
 </body>
 </html>
