Got gifs to load from Giphy API and set up for pause/play

--- a/index.html
+++ b/index.html
@@ -6,17 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Reaction GIFs Generator</title>
 
+    <!-- Link to Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <!-- Links to CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
     <!-- Links to jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+   
     <!-- Links to JavaScript -->
     <script src="assets/javascript/app.js"></script>
 
 </head>
 <body>
-    <h1>I'm in a glass cage of emotion!</h1>
+    <jumbotron><h1>Reaction GIF Generator</h1><br><h4>Click GIFs to animate!</h4></jumbotron>
 
     <!-- Rendered buttons go here -->
     <div id="buttons"></div>
@@ -29,7 +33,6 @@
 
     <!-- Area of generated gifs -->
     <div id="gifs"></div>
-    <div class="gif"></div>
 
 </body>
 </html>
